--- a/.gitignore
+++ b/.gitignore
@@ -2,3 +2,4 @@
 entregaPlantillas/ejs/node_modules
 entregaPlantillas/handlebars/node_modules
 entregaPlantillas/pug/node_modules
+entregaSocket/node_modules
