Entrega Final parte 1

--- a/.gitignore
+++ b/.gitignore
@@ -3,3 +3,4 @@ entregaPlantillas/ejs/node_modules
 entregaPlantillas/handlebars/node_modules
 entregaPlantillas/pug/node_modules
 entregaSocket/node_modules
+entregaFinal/node_modules
