Entrega base de datos

--- a/.gitignore
+++ b/.gitignore
@@ -4,3 +4,4 @@ entregaPlantillas/handlebars/node_modules
 entregaPlantillas/pug/node_modules
 entregaSocket/node_modules
 entregaFinal/node_modules
+entregaBD/node_modules
