--- a/entregaFinal/package.json
+++ b/entregaFinal/package.json
@@ -11,8 +11,11 @@
   "author": "",
   "license": "ISC",
   "dependencies": {
+    "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "express-async-handler": "^1.2.0",
+    "firebase-admin": "^11.0.0",
+    "mongoose": "^6.4.3",
     "nodemon": "^2.0.18"
-    
   }
 }
