--- a/.gitignore
+++ b/.gitignore
@@ -6,3 +6,4 @@ entregaSocket/node_modules
 entregaFinal/node_modules
 entregaBD/node_modules
 entregaFinal/src/firebase.json
+entregaMocks/node_modules
