--- a/.gitignore
+++ b/.gitignore
@@ -9,3 +9,4 @@ entregaFinal/src/firebase.json
 entregaMocks/node_modules
 test/node_modules
 entregaLogin/node_modules
+entregaAutenticate/node_modules
